--- a/Voyage/style.css
+++ b/Voyage/style.css
@@ -1,96 +1,230 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-
 *{
-margin:0;
-padding; 0;
-font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.begin{
-    height: 100% ;
-    width: 100%;
-    background-image:url(banner.jpg);
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-
-
- }
-.size-box{
-      width: 380px;
-      height: 580px;
-      position: relative;
-      margin: 6% auto;
-      background: #fff;
-      padding: 5px;
-overflow:hidden;
+section{
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: url(background.png)no-repeat;
+  background-size: cover;
+  background-position: center;
 }
- .box-botton{
-    width: 220px;
-    margin: 35px auto;
-    position: relative;
-    box-shadow: 0 0 20px 9px #ddd;
-    border-radius: 30px;
+
+header{
+  position: relative;
+  top: 0;
+  width: 100%;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.switch-botton{
-    padding: 10px 30px;
+
+header .logo{
+  position: relative;
+  color: #FF8C00;
+  font-size: 30px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
+header .navigation a{
+  color: #000;
+  text-decoration: none;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding: 2px 15px;
+  border-radius: 20px;
+  transition: 0.3s;
+  transition-property: background;
+}
+
+header .navigation a:not(:last-child){
+  margin-right: 30px;
+}
+
+header .navigation a:hover{
+  background: #fff;
+}
+
+.content{
+  max-width: 650px;
+  margin: 60px 100px;
+}
+
+.content .info h2{
+  color: #ffffff;
+  font-size: 55px;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 2px;
+  line-height: 60px;
+  margin-bottom: 30px;
+}
+
+.content .info h2 span{
+  color: #F0FFFF;
+  font-size: 50px;
+  font-weight: 600;
+}
+
+.content .info p{
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+
+.content .info-btn{
+  color: #fff;
+  background: #0000CD;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 2px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: 0.3s;
+  transition-property: background;
+}
+
+.content .info-btn:hover{
+  background: #FF8C00;
+}
+
+.media-icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.media-icons a{
+  position: relative;
+  color: #111;
+  font-size: 25px;
+  transition: 0.3s;
+  transition-property: transform;
+}
+
+.media-icons a:not(:last-child){
+  margin-right: 60px;
+}
+
+.media-icons a:hover{
+  transform: scale(1.5);
+}
+
+label{
+  display: none;
+}
+
+#check{
+  z-index: 3;
+  display: none;
+}
+
+/* Responsive styles */
+
+@media (max-width: 960px){
+  header .navigation{
+    display: none;
+  }
+
+  label{
+    display: block;
+    font-size: 25px;
     cursor: pointer;
-    background: transparent;
-    border: 0;
-    outline: none;
-    position: relative;
-}
-#color-botton{
+    transition: 0.3s;
+    transition-property: color;
+  }
+
+  label:hover{
+    color: #fff;
+  }
+
+  label .close-btn{
+    display: none;
+  }
+
+  #check:checked ~ header .navigation{
+    z-index: 2;
+    position: fixed;
+    background: rgba(114, 223, 255, 0.9);
     top: 0;
+    bottom: 0;
     left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #check:checked ~ header .navigation a{
+    font-weight: 700;
+    margin-right: 0;
+    margin-bottom: 50px;
+    letter-spacing: 2px;
+  }
+
+  #check:checked ~ header label .menu-btn{
+    display: none;
+  }
+
+  #check:checked ~ header label .close-btn{
+    z-index: 2;
+    display: block;
+    position: fixed;
+  }
+
+  label .menu-btn{
     position: absolute;
-    width: 110px;
-    height: 100%;
-    background: linear-gradient(to right ,#00CBD9, #5800FF);
-    border-radius: 30px;
-    transition: .5s;
-}
-.input-text{
-    top: 180px;
+  }
+
+  header .logo{
     position: absolute;
-    width: 280px;
-    transition: .5s;
+    bottom: -6px;
+  }
+
+  .content .info h2{
+    font-size: 45px;
+    line-height: 50px;
+  }
+
+  .content .info h2 span{
+    font-size: 40px;
+    font-weight: 600;
+  }
+
+  .content .info p{
+    font-size: 14px;
+  }
 }
-.inputting-text{
-      width: 100%;
-      padding: 10px 0;
-      margin: 5px 0;
-      border-left: 0;
-      border-top: 0;
-      border-right: 0;
-      border-bottom: 1px solid #ffff;
-      outline: none;
-      background: transparent;
+
+@media (max-width: 560px){
+  .content .info h2{
+    font-size: 35px;
+    line-height: 40px;
+  }
+
+  .content .info h2 span{
+    font-size: 30px;
+    font-weight: 600;
+  }
+
+  .content .info p{
+    font-size: 14px;
+  }
 }
-.submit-botton{
-      width: 85%;
-      padding: 10px 30px;
-      cursor: pointer;
-      display: block;
-      margin: auto;
-      background: linear-gradient(to right,#00CBD9, #5800FF);
-      border: 0;
-      outline: none;
-      border-radius: 30px;
-}
-.check-box{
-      margin: 30px 10px 30px 0;
-}
-span{
-      color: #777;
-      font-size: 12px;
-      bottom: 68px;
-      position: absolute;
-}
-#login{
-      left: 50px;
-}
-#register{
-      left: 450px;
-}
+      
